--- a/package.json
+++ b/package.json
@@ -13,11 +13,14 @@
     "@ant-design/icons": "^5.3.7",
     "@hookform/resolvers": "^3.9.0",
     "antd": "^5.19.1",
+    "chart.js": "^4.4.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.52.1",
     "react-icons": "^5.2.1",
+    "react-otp-input": "^3.1.1",
     "react-router-dom": "^6.24.1",
+    "recharts": "^2.12.7",
     "redux-persist": "^6.0.0",
     "zod": "^3.23.8"
   },
