--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-router-dom": "^6.24.1",
     "recharts": "^2.12.7",
     "redux-persist": "^6.0.0",
+    "sweetalert2": "^11.12.2",
     "zod": "^3.23.8"
   },
   "devDependencies": {
