--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@ant-design/icons": "^5.3.7",
     "@hookform/resolvers": "^3.9.0",
+    "@reduxjs/toolkit": "^2.3.0",
     "antd": "^5.19.1",
     "chart.js": "^4.4.3",
     "moment": "^2.30.1",
@@ -20,9 +21,11 @@
     "react-hook-form": "^7.52.1",
     "react-icons": "^5.2.1",
     "react-otp-input": "^3.1.1",
+    "react-redux": "^9.1.2",
     "react-router-dom": "^6.24.1",
     "recharts": "^2.12.7",
     "redux-persist": "^6.0.0",
+    "sonner": "^1.5.0",
     "sweetalert2": "^11.12.2",
     "zod": "^3.23.8"
   },
