--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-hook-form": "^7.52.1",
     "react-icons": "^5.2.1",
     "react-otp-input": "^3.1.1",
+    "react-quill": "^2.0.0",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.24.1",
     "recharts": "^2.12.7",
