--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@reduxjs/toolkit": "^2.3.0",
     "antd": "^5.19.1",
     "chart.js": "^4.4.3",
+    "jodit-react": "^4.1.2",
     "moment": "^2.30.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
